--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Professional Form Validation</title>
     <link rel="stylesheet" href="styles.css">
+    <script src="https://kit.fontawesome.com/a076d05399.js" crossorigin="anonymous"></script>
 </head>
 <body>
     <div class="container">
@@ -31,7 +32,10 @@
             
             <div class="input-group">
                 <label>Password</label>
-                <input type="password" id="password" placeholder="Enter your password">
+                <div class="password-wrapper">
+                    <input type="password" id="password" placeholder="Enter your password">
+                    <i class="fas fa-eye-slash toggle-password" id="togglePassword"></i>
+                </div>
                 <span class="strength" id="passwordStrength"></span>
                 <span class="error" id="passwordError"></span>
             </div>
